# spacenet

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  apollo-17.json  conftest.py  package-lock.json  package.json  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  userbase.db  webpack.config.js
app/: README.md  __init__.py  auth_dependencies.py  dependencies.py  main.py  provide_secrets.py  pyproject.toml  requirements.txt  secrets.json.schema  setup.cfg  start.sh
app/campaign/: README.md  __init__.py  main.py
app/campaign/api/: __init__.py  demands.py  main.py  spatial_simulation.py  spatial_simulation_placeholder.py
app/campaign/static/: bat_chart.html  bat_chart_parsing.js  campaign_formview.html  campaign_formview.js  compile_scenario.js  consChart.html  consChart.js  consume_resources.html  consume_resources.js  consume_resources_formview.html  consume_resources_formview.js  create_elements.html  create_elements.js  create_mission.html  create_mission.js  create_scenario.html  create_scenario.js  crewedEVA_formview.html  crewedEVA_formview.js  crewed_exploration_formview.html  crewed_exploration_formview.js  d3-geo-warp.js  dynamic_table.js  eqChart.html  eqChart.js  event_forms.js  event_table.js  flight_transport_formview.css  flight_transport_formview.html  flight_transport_formview.js  index.html  main_menu.html  main_menu.js  mission_demand_model.js  mission_formview.html  mission_formview.js  mission_model_formview.html  move_elements.html  move_elements.js  multiselect.css  (+26 more)
app/database/: README.md  __init__.py  main.py
app/database/api/: __init__.py  database.py  main.py  utilities.py
app/database/static/: crewedEVA_formview.html  crewedEVA_formview.js  edge_formview.html  edge_formview.js  edge_table.html  edges_table.html  element_formview.html  element_formview.js  element_table.html  elements_table.html  formviewdir.html  hello_world.html  index.html  index.js  jsuniv.js  mission_demand_formview.html  node_formview.html  node_formview.js  node_table.html  resource_formview.html  resource_formview.js  resource_table.html  resources_formview.html  resources_formview.js  resources_table.html  spaceTransport_formview.html  spaceTransport_formview.js  state_formview.js  state_table.html  style.css  table.js
app/database/test/: README.md  __init__.py  test_database_object_properties.py  test_edge.py  test_edgeDatabaseModel.py  test_edge_routing.py  test_element.py  test_element_routing.py  test_hello_world.py  test_node.py  test_nodeDatabaseModel.py  test_node_edge_routing.py  test_node_routing.py  test_resource.py  test_resource_routing.py  test_sortie_data.py  test_state.py  test_with_lunar_sortie_data.py  utilities.py
app/login/: README.md  auth.py  main.py  requirements.txt
app/login/static/: index.html  index.js
app/src/: __init__.py  auth_dependencies.py  main.py
app/src/campaign/: README.md  __init__.py  main.py
app/src/database/: README.md  __init__.py  main.py
app/src/static/: index.html  login.html  login.js  login_style.css  style.css
app/static/: index.html  index.js  login.html  login.js  login_style.css  style.css
spacenet/: README.md  __init__.py  constants.py  pyproject.toml  setup.cfg  setup.py
spacenet/analysis/: README.md  __init__.py  checked_scenario.py  decompose_events.py  entities.py  errors.py  exceptions.py  indirect_entities.py  min_heap.py  sim_types.py  simulation.py  simulation_errors.py
spacenet/analysis/test/: __init__.py  checked_scenario_regression_inputs.json  test_build_checked_scenario.py  test_checked_scenario.py  test_min_heap.py  test_regression.py  test_simulation.py  test_simulation_helpers.py  test_with_apollo_17_data.py  test_with_iss_resupply_data.py  test_with_mars_exploration_data.py  utilities.py
spacenet/docs/: conf.py  contents.rst  index.rst
spacenet/docs/about/: index.rst
spacenet/docs/api/: schema.rst
spacenet/fuel_formulas/: README.md  __init__.py  constants.py  functions.py
spacenet/fuel_formulas/test/: README.md  __init__.py  delta_v_examples.json  test_fuel_formulas.py  utilities.py
spacenet/schemas/: README.md  Resource.py  __init__.py  bases.py  burn.py  constants.py  consume-resources.py  consume_resource.py  consume_resources.py  crewed_eva.py  crewed_exploration.py  edge.py  element.py  element_demand_model  element_demand_model.py  element_events.py  element_operational_state  element_operational_state.py  event.py  events.py  flight_transport.py  hello_world.py  manifest  manifest.py  mission.py  mission_demand_model.py  mixins.py  node.py  propulsive_burn.py  resource.py  scenario  scenario.py  space_transport.py  state.py  surface_transport.py  transfer_resources.py  types.py  utilities.py
spacenet/schemas/apollo_17/: apollo_17.json
spacenet/schemas/lunar_sortie/: altair.json  ares_1.json  ares_5.json  fuels.json  orion.json  sortie_edges.json  sortie_elements.json  sortie_nodes.json
spacenet/schemas/other_scenarios/: iss_resupply.json  mars_exploration.json
spacenet/schemas/test/: __init__.py  bad_edges.json  bad_scenario.json  element_maps.py  good_edges.json  good_elements.json  good_scenario.json  resource_data.json  resource_list.py  test_edge.py  test_element.py  test_element_pbt.py  test_hello_world.py  test_mixins.py  test_node.py  test_state.py  (+4 more)
spacenet/src/: setup.cfg
spacenet/test/: README.md  TestResource.py  badEdges.json  badEdges.txt  badNodes.json  badNodes.txt  bad_edges.json  bad_nodes.json  event_utilities.py  factories.py  goodEdges.txt  goodNodes.json  goodNodes.txt  good_edges.json  good_elements.json  good_nodes.json  hello_world_data.json  lunar_sortie_utils.py  resource_data.json  resource_list.py  test_edge.py  test_edgeSchema.py  test_element.py  test_element_model.py  test_hello_world.py  test_make_element_event.py  test_mixins.py  test_move_element_event.py  test_node.py  test_nodeSchema.py  test_reconfigure_element_event.py  test_remove_element_event.py  test_resource.py  test_state.py  utilities.py
spacenet/tests/: quick_start_1.py
(+526 files in other folders)
