[build-system]
requires = [
    "setuptools >= 57.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "spacenet"
description = "Space Exploration Campaign Logistics Simulation"
authors = [
    {"name" = "Paul T. Grogan", "email" = "paul@ptgrogan.com"},
    {"name" = "Sarah Bentley", "email" = "sbentley@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]
dependencies = [
    "enum-tools[sphinx] >= 0.9.0",
    "fastapi-camelcase >= 1.0.5",
    "numpy >= 1.24.1",
    "pandas >= 1.5.2",
    "python-dateutil >= 2.8.2",
    "pydantic >= 1.10.4"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "coverage >= 7.2.1"
]
docs = [
    "autodoc_pydantic >= 1.8.0",
    "docutils == 0.17.1",
    "myst-parser >= 0.19.1",
    "sphinx >= 1.6.3",
    "sphinx-rtd-theme >= 1.2.0"
]
lint = [
    "black >= 23.1.0",
    "pylint >= 2.16.3",
    "pylint-pydantic >= 0.1.7"
]
app = [
    "aiosqlite >= 0.18.0",
    "python-dotenv >= 1.0.0",
    "fastapi >= 0.92.0",
    "fastapi-users[sqlalchemy] >= 10.4",
    "uvicorn[standard] >= 0.20.0"
]

[tool.setuptools.dynamic]
version = {attr = "spacenet.__version__"}