[metadata]
name = spacenet-app
version = 3.0.0
description = SpaceNet Application
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    aiofiles
    fastapi
    pydantic
    sqlalchemy==1.3.24
    uvicorn
    requests
    fastapi-users
    databases[sqlite]
    python-jose
    passlib
    python-multipart
