[metadata]
name = spacenet
version = 3.0.1
author = "Paul Grogan, Sarah Bentley"
author_email = "paul@ptgrogan.com, sbentley@mit.edu"
description = SpaceNet Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/space-logistics-org/spacenet
project_urls =
    Bug Tracker = https://github.com/space-logistics-org/spacenet/issues
    Repository = "https://github.com/space-logistics-org/spacenet"
    Documentation = "https://spacenet.readthedocs.io"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
  pydantic
  deal
  fastapi-camelcase

[options.packages.find]
where = src
